--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.0.0"
 requires-python = ">=3.11"
 
 [tool.black]
+extend-exclude = "typesafety"
 
 [tool.mypy]
 strict_optional = false
@@ -27,6 +28,7 @@ disable_error_code = [
 enable_incomplete_feature = ["TypeVarTuple"]
 
 [tool.pyright]
+exclude = ["tests/typesafety"]
 
 [tool.isort]
 profile = "black"
