--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,11 +10,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Cache for pip
-        uses: actions/cache@v3
+      - uses: actions/setup-python@v4
         with:
-          path: ~/.cache/pip
-          key: cache-pip
+          python-version: "3.11"
+          cache: "pip"
 
       - name: Install dependencies
         run: |
