--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,6 +20,22 @@ jobs:
           pip install -r requirements.txt
           pip install -r dev-requirements.txt
 
+      - name: Use Pillow 10.0.0.dev0
+        run: |
+          pip uninstall -y Pillow
+
+          git clone https://github.com/python-pillow/Pillow
+          cd Pillow
+          git fetch origin pull/7123/head:pr-7123
+          git checkout pr-7123
+
+          sudo apt-get install python3-dev python3-setuptools \
+            libtiff5-dev libjpeg8-dev libopenjp2-7-dev zlib1g-dev \
+            libfreetype6-dev liblcms2-dev libwebp-dev tcl8.6-dev tk8.6-dev python3-tk \
+            libharfbuzz-dev libfribidi-dev libxcb1-dev
+
+          pip install .
+
       - name: Install package
         run: pip install .
 
