Only include src directory in coverage calculation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,7 @@ profile = "black"
 known_third_party = ["PIL"]
 
 [tool.coverage.run]
-source = ["."]
+source = ["src/pyanimate"]
 
 [tool.coverage.report]
 
