--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,8 @@ exclude_lines = [
     "raise NotImplementedError",
     "@(abc\\.)?abstractmethod",
     "@property",
+    "@[a-z0-9_]+\\.setter",
+    "except ImportError",
 ]
 
 [tool.pylint.main]
