--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -44,4 +44,5 @@ jobs:
           ./test.sh
 
       - name: Upload coverage to Codecov
+        if: success() || failure()
         uses: codecov/codecov-action@v3
