--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,10 @@ disable_error_code = [
 enable_incomplete_feature = ["TypeVarTuple"]
 
 [tool.pyright]
+exclude = [
+    "**/flycheck_.*",
+    "**/__pycache__",
+]
 
 [tool.isort]
 profile = "black"
@@ -129,6 +133,7 @@ disable = [
 
 # Files or directories to be skipped. They should be base names, not paths.
 ignore = [".git", "__pycache__", ".mypy_cache", ".pytest_cache"]
+ignore-patterns = ["flycheck_.*"]
 
 # List of module names for which member attributes should not be checked (useful
 # for modules/projects where namespaces are manipulated during runtime and thus
