--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,3 @@
-[project]
-name = "pyanimate"
-version = "0.0.0"
-requires-python = ">=3.11"
-
 [tool.black]
 extend-exclude = "typesafety"
 
@@ -208,3 +203,37 @@ max-nested-blocks = 6
 
 [tool.pylint.reports]
 output-format = "colorized"
+
+[tool.poetry]
+name = "pyanimate"
+version = "0.1.0"
+description = ""
+authors = ["Gulshan Singh <gsingh2011@gmail.com>"]
+license = "MIT"
+readme = "README.md"
+packages = [
+    { include = "pyanimate", from = "src" },
+]
+
+[tool.poetry.dependencies]
+python = "^3.11"
+kiwisolver = "^1.4.5"
+Pillow = "^10.1.0"
+
+[tool.poetry.group.dev.dependencies]
+black = ">=23.3.0,<23.4.0"
+coverage = ">=7.2.6,<7.3.0"
+isort = ">=5.12.0,<5.13.0"
+mypy = ">=1.3.0,<1.4.0"
+pylint = ">=2.17.4,<2.18.0"
+pyright = ">=1.1.310,<1.2.0"
+pytest = ">=7.3.1,<7.4.0"
+pytest-cov = ">=4.0.0,<4.1.0"
+pytest-dependency = ">=0.5.1,<0.6.0"
+pytest-pyright = ">=0.0.3,<0.1.0"
+rich = ">=13.3.5,<13.4.0"
+ruff = ">=0.0.269,<0.1.0"
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
